issue #645: Allow jumping from edge to linked vertices

--- a/js/apps/system/aardvark/frontend/css/documentView.css
+++ b/js/apps/system/aardvark/frontend/css/documentView.css
@@ -18,6 +18,15 @@
   cursor: default !important;
 }
 
+.docLink {
+}
+
+.docPreview {
+  text-align: right;
+  float: right;
+  margin-right: -17px !important; 
+}
+
 #collectionPrev, #collectionNext{
   cursor: pointer;
 }
